<resources>
    <string name="app_name">Proyecto WSDL</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Escribe tu nombre:</string>
    <string name="aceptar">Aceptar</string>
    <string name="ingresar">Ingresar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="listar">Listar</string>

    <string name="Dir">Direccion</string>
    <string name="Tele">Telefono</string>
    <string name="DirectorCasa">Director Casa</string>
    <string name="NCC">Nombre Corto Casa</string>

    <string name="Beneficiario">Beneficiario</string>
    <string name="CS">Casa Salesiana</string>
    <string name="Colaborador">Colaborador</string>

    <string name="Lugar">Lugar</string>
    <string name="ObraSalesiana">Obra Salesiana</string>
    <string name="TipoColaborador">Tipo Colaborador</string>
    <string name="title_activity_mod_beneficiario">ModBeneficiario</string>


    <string name="lblAcc">Select Account Type</string>
    <string name="lblSubAcc">Select Account Head</string>

    <string-array name="acc_type">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <!-- para Modulo Beneficiario-->
    <string name="idcasa">id casa</string>
    <string name="idobra">id obra</string>
    <string name="idlugar">id lugar</string>
    <string name="descripcion">descripcion</string>
    <string name="numBeneficiario">numero beneficiarios</string>

    <!-- para Modulo colaboradores-->
    <string name="selCasa">Sleecionar casa</string>
    <string name="selObra">Sleecionar obra</string>
    <string name="selLugar">Sleecionar lugar</string>
    <string name="selNumColab">Numero de colaboradores</string>
    <string name="selTipoColab">Tipo de colaborador</string>

    <!-- para Modulo Lugar -->
    <string name="nombreLugar">Nombre del lugar</string>
    <string name="descripcionLugar">Descripcion del lugar</string>
    <string name="responsableLugar">Responsable del lugar</string>
    <string name="direccionLugar">Direccion del lugar</string>
    <string name="telefonoLugar">Telefono del lugar</string>

    <!-- para Modulo Obra Salesiana -->
    <string name="idTipoObra">id tipo obra</string>
    <string name="denomObra">denominacion obra</string>
    <string name="campoServObra">campo servicio obra</string>
    <string name="productosObra">productos obra</string>
    <string name="horarioObra">Ejem 10:00 a 15:00</string>
    <string name="inforObra">informacion obra</string>
    <string name="pagWebObra">pagina web obra</string>
    <string name="nombreCortoObra">nombre corto obra</string>

    <!-- para Modulo Tipo colaborador -->
    <string name="descTipoColab">descripcion tipo colaborador</string>



    <string name="cargando">Cargando...</string>

    <string name="iralmain">main</string>
    <string name="correo">correo electronico</string>
    <string name="ponerIPdelNetBeans">172.16.24.19</string>

</resources>
